--- a/wiki/Codegrabber.wiki
+++ b/wiki/Codegrabber.wiki
@@ -1,8 +1,8 @@
 #labels Phase-Design,Featured,Phase-QA
-Code Grabber "Getting the most of your source code"
+Code Sponge - "Getting the most of your source code"
 = Introduction =
 
-Does your source code lack knowledge? Is it a multiple lined mess that just doesn't make any sense to anyone but you? If you or one of your employees left work now, would others be able to make sense of it? Code Grabber is new technology for your code, clarifying the coded mess of programming into an easy to follow step by step summary of the content. Just program like you normally do and let Code Grabber system do the rest.
+Does your source code lack knowledge? Is it a multiple lined mess that just doesn't make any sense to anyone but you? Maybe neither you? If you or one of your employees left work now, would others be able to make sense of it? Code Sponge is new technology for your code, clarifying the coded darkness of programming into an easy to ready, follow steps by step, summary filter of the content. Just program well and let Code Sponge do the rest.
 
 = Details =
 
