--- a/wiki/Codegrabber.wiki
+++ b/wiki/Codegrabber.wiki
@@ -6,7 +6,52 @@ Does your source code lack knowledge? Is it a multiple lined mess that just does
 
 = Details =
 
-Add your content here.  Format your content with:
+*The Hypotheses*
+
+  *Source Code as Live Documentation
+  *Source Code as Communication Channel
+  *Source Code as Software Metrics
+
+*The Advantages...*
+
+  *Less risk of miscommunication
+  *Faster Communication
+  *Knowledge of domain resides in codebase
+  *Overhearing (sit together)
+  *Code is easier to understand (maintainable, extensible)
+  *Healthier code allows team to respond to change
+
+*Very Important*
+*Ubiquitous Language and Decoupling*
+
+*u-biq-ui-tous*
+  *Adjective: Present, appearing, or found everywhere.
+  *Synonyms: omnipresent
+   *(dictionary.com)
+
+*UBIQUITOUS LANGUAGE*
+  *A language structured around the domain model and used by all team members to connect all the activities of the team with the software.
+    (Excerpted from Domain-Driven Design by Eric Evans)
+
+  *We understand each other.
+     (Excerpted from The Agile Development by James Shore and Shane Warden, Published by O'Reilly. Copyright 2008 the authors. All rights reserved.)
+
+
+*Coding Examples:*
+
+|| *NO* || *YES* ||
+|| Integer i = new Integer(); ||  ||
+|| String char1 = new String() {} || String realMeaningOfMyString=new String(); ||
+|| public class GameDAO() {} || public class ScoreDataLoader(){} ||
+|| catch (Exception e) || catch (Exception NotLoggedInException) ||
+
+|| *NO* || *YES*||
+|| Ambiguities || Clarity ||
+|| Inconsistencies || Precision ||
+|| Synonyms || Reuse ||
+|| Abbreviations || Full Names ||
+
+
   * Text in *bold* or _italic_
   * Headings, paragraphs, and lists
   * Automatic links to other wiki pages
