--- a/wiki/Codegrabber.wiki
+++ b/wiki/Codegrabber.wiki
@@ -2,7 +2,9 @@
 Code Sponge - "Getting the most of your source code"
 = Introduction =
 
-Does your source code lack knowledge? Is it a multiple lined mess that just doesn't make any sense to anyone but you? Maybe neither you? If you or one of your employees left work now, would others be able to make sense of it? Code Sponge is new technology for your code, clarifying the coded darkness of programming into an easy to ready, follow step by step, summary filter of the content. Just program well and let Code Sponge do the rest.
+Does your source code lack knowledge? Is it a multiple lined mess that just doesn't make any sense to anyone, even possibly you? If you or one of your employees left work now, would others be able to make sense of it? 
+
+Code Sponge is a new technology for your software, clarifying the arkness of programming into an easy to use to read, step by step summary of the content. Just program well and let Code Sponge do the rest.
 
 = Details =
 
