--- a/wiki/SourceAgile.wiki
+++ b/wiki/SourceAgile.wiki
@@ -1,2 +1,12 @@
 We understand each other
 Software development is by its nature a series of translations and compromises. What the end user wants, what the customer is willing to pay for, and what is technically feasible rarely combine to form a unified set of features. In this talk the dynamic duo Alline Watkins and June Clarke will explore how an Agile team can work to understand each other better, in particular at the communication divide between stakeholders and developers. We will show you how to develop a domain-specific ubiquitous language, how to lessen the responsibility gap between managers and developers, and how to use your codebase as the central source for documentation.
+
+
+
+
+Code Sponge - "Getting the most of your source code"
+= Introduction =
+
+Does your source code lack knowledge? Is it a multiple lined mess that just doesn't make any sense to anyone, even possibly you? If you or one of your employees left work now, would others be able to make sense of it? 
+
+Code Sponge is a new technology for your software, clarifying the darkness of programming into an easy to use to read, step by step summary of the content. Just program well and let Code Sponge do the rest.
