Edited wiki page CostumerInterview_AllineWatkins_TATAConsultancyServices through web user interface.

--- a/wiki/CostumerInterview_AllineWatkins_TATAConsultancyServices.wiki
+++ b/wiki/CostumerInterview_AllineWatkins_TATAConsultancyServices.wiki
@@ -45,47 +45,56 @@ All the CMMI Requirements, Project Plan, Use Cases, UML Design, User Manuals, MS
 
 is it problematic? how do requirements are communicated? how the developer team reports work?
 
-{{{ The costumers are on site, they work together with the programmers. The communication is fast and efficient, but the software scope is way to big. }}}
+{{{ 
+The costumers are on site, they work together with the programmers. The communication is fast and efficient, but the software scope is way to big.
+ }}}
 
 
 - What do you think about the source code being opened to stakeholders in a way they can understand and comment it?
 
+{{{
 It is going to take a while for them to get used of it. No time available to change behaviors.
-
+}}}
 
 - What do you think about specification/documentation being generated from inside the Source Code?
 
+{{{
 In this project at this moment it will be a very big change of behavior.
 Is going to be a lot of time to adapt to this new behavior and the project is already running out of time.
 (But the project totally fails anyway at the end)
 Self generated documentation will probably not solve the big scope problem.
-
+}}}
 
 
 - if stakeholders could send messages to the programmers inside the source code, in a very contextualized way?
 
 would it save you money? would it help your development process? would it make it worst? Hurt?
 
+{{{
 For the stakeholders to stop to analyse the source code it will take time they need to write the Use Cases.
-
+}}}
 
 
 - Are you able to drive test our Software?
 
+{{{
 In a very small portion of the scope.
-
+}}}
 
 - Do you think you could refactoring your Source Code to take advantages out of it?
 
+{{{
 In a very very small portion of the scope.
-
+}}}
 
 - How much an automatic generated User Manual is worth for you?
 
+{{{
 Depends on how good it is going to be at the end.
-
+}}}
 
 
 - How much you think you could pay to use Code Sponge?
-
+{{{
 If it helps, a lot. 
+}}}
