--- a/wiki/CostumerInterviews.wiki
+++ b/wiki/CostumerInterviews.wiki
@@ -1,4 +1,4 @@
-- *What are working with right now?*
+1. *What are working with right now?*
 
 What company?
 What job title?
@@ -8,20 +8,20 @@ What does your software do?
 How many in your team?
 
 
-- *What are the most important problems you are dealing at your work at the moment?*
+2. *What are the most important problems you are dealing at your work at the moment?*
 
 
 
-- *What do you think about agile development?*
+3. *What do you think about agile development?*
 
 
-- *How do you document your software? If you do.*
+4. *How do you document your software? If you do.*
 
 if no, how do your users learn to use your software?
 
 
 
-- *Do you have current documentation requirements?*
+5. *Do you have current documentation requirements?*
 
 CMMI requirements?
 Contract requirements?
@@ -29,44 +29,45 @@ End users requirements (manuals/helps)?
 Managements requirements?
 
 
-- *How does the interaction between Stakeholders and Developers on your team happen?*
+6. *How does the interaction between Stakeholders and Developers on your team happen?*
 
    is it problematic?
    how do requirements are communicated?
    how the developer team reports work?
 
 
-- *How does the interaction between the Developers on your team happen?*
+7. *How does the interaction between the Developers on your team happen?*
 
    is it problematic?
    how do knowledge are exchanged?
    how does one developer understand the code of the others?
 
 
-- *What do you think about documentation being generated from inside the Source Code?*
+8. *What do you think about documentation being generated from inside the Source Code?*
 
 
 
--  *if stakeholders could send messages to the programmers inside the source code?*
+9.  *if stakeholders could send messages to the programmers inside the source code?*
 
 would it save you money?
 would it help your development process?
 would it make it worst? Hurt?
 
 
--  *if developers can understand better the code from each other?*
+10.  *if developers can understand better the code from each other?*
 
 is it an issue for your software right now?
 would it save you money?
 would it help your development process?
 
 
-- *Are you able to drive test our Software?*
-
-- *Do you think you could refactoring your Source Code to take advantages out of it?*
+11. *Are you able to drive test our Software?*
 
 
-- *How much an automatic generated User Manual is worth for you?*
+12. *Do you think you could refactoring your Source Code to take advantages out of it?*
 
 
-- *How much you think you could pay to use Code Sponge?*
+13. *How much an automatic generated User Manual is worth for you?*
+
+
+14. *How much you think you could pay to use Code Sponge?*
