--- a/trunk/src/sourceagile/client/InternationalizationConstants_es.properties
+++ b/trunk/src/sourceagile/client/InternationalizationConstants_es.properties
@@ -2,8 +2,13 @@ selectAProject = Seleccione un Proyecto
 user = Usuario
 logIn = Entrar
 search = Búsqueda
+development = Desarrollo
 diagnosis = Diagnóstico
 documentation = Documentación
 planning = Planificación
 metrics = Métricas
 source = Código Fuente
+projectDescription = Descripción del proyecto
+specification = Especificación
+userManual = Manual de Usuario
+export = Exportar
