--- a/trunk/src/sourceagile/client/InternationalizationConstants_es.properties
+++ b/trunk/src/sourceagile/client/InternationalizationConstants_es.properties
@@ -1,6 +1,7 @@
 selectAProject = Seleccione un Proyecto
 user = Usuario
 logIn = Entrar
+project = Proyecto
 search = Búsqueda
 development = Desarrollo
 diagnosis = Diagnóstico
