--- a/trunk/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
+++ b/trunk/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
@@ -1,6 +1,7 @@
 selectAProject = Selecione um Projeto
 user = Usuário
 logIn = Entrar
+project = Projeto
 search = Pesquisa
 development = Desenvolvimento
 diagnosis = Diagnose
