--- a/trunk/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
+++ b/trunk/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
@@ -1,7 +1,18 @@
+english = English
+portugues = Português
+espanol = Español
+welcomeTo = Bem vindo ao
 selectAProject = Selecione um Projeto
 user = Usuário
+password = Senha
 logIn = Entrar
+readMore = Saiba mais
 project = Projeto
+about = Sobre
+description = Descrição
+relatedLinks = Links Relacionados
+totals = Totais
+addNewTask = Adicionar Tarefa
 search = Pesquisa
 development = Desenvolvimento
 diagnosis = Diagnose
@@ -10,6 +21,9 @@ planning = Planejamento
 metrics = Métricas
 source = Código Fonte
 projectDescription = Descrição do Projeto
-specification = Especificação
+featuresList = Funcionalidades
+architecture = Arquitetura
+entities = Entidades
+specification = Portal da Especificação
 userManual = Manual do Usuário
 export = Exportar
