--- a/tags/Release0.8_AppEngine/src/sourceagile/client/InternationalizationConstants_es.properties
+++ b/tags/Release0.8_AppEngine/src/sourceagile/client/InternationalizationConstants_es.properties
@@ -1,7 +1,18 @@
+english = English
+portugues = Português
+espanol = Español
+welcomeTo = Bienvenido a
 selectAProject = Seleccione un Proyecto
 user = Usuario
+password = Contraseña
 logIn = Entrar
+readMore = Leer más
 project = Proyecto
+about = Sobre
+description = Descripción
+relatedLinks = Links Relacionados
+totals = Totales
+addNewTask = Nueva Tarea
 search = Búsqueda
 development = Desarrollo
 diagnosis = Diagnóstico
@@ -10,6 +21,9 @@ planning = Planificación
 metrics = Métricas
 source = Código Fuente
 projectDescription = Descripción del proyecto
-specification = Especificación
+featuresList = Lista de funciones
+architecture = Arquitetura
+entities = Entidades
+specification = Portal de la Especificación
 userManual = Manual de Usuario
 export = Exportar
