--- a/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
+++ b/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
@@ -27,3 +27,5 @@ entities = Entidades
 specification = Portal da Especificação
 userManual = Manual do Usuário
 export = Exportar
+edit = Editar
+test = Teste
