--- a/tags/Release0.8_AppEngine/src/sourceagile/client/InternationalizationConstants_es.properties
+++ b/tags/Release0.8_AppEngine/src/sourceagile/client/InternationalizationConstants_es.properties
@@ -27,3 +27,5 @@ entities = Entidades
 specification = Portal de la Especificación
 userManual = Manual de Usuario
 export = Exportar
+edit = Edición
+test = Test
