--- a/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
+++ b/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
@@ -20,10 +20,12 @@ documentation = Documentação
 planning = Planejamento
 metrics = Métricas
 source = Código Fonte
-projectDescription 
+projectDescription = Descrição do Projeto
 featuresList = Funcionalidades
 architecture = Arquitetura
 entities = Entidades
 specification = Portal da Especificação
 userManual = Manual do Usuário
 export = Exportar
+edit = Editar
+test = Teste
