--- a/wiki/CustomerDevelopment.wiki
+++ b/wiki/CustomerDevelopment.wiki
@@ -1,6 +1,10 @@
-#summary One-sentence summary of this page.
+= Customer Development =
 
-= Introduction =
+<img src="http://agiledoc.googlecode.com/svn/wiki/LiveSourceEcosystem.jpg" border="1">
+
+
+
+
 
 Add your content here.
 
@@ -11,6 +15,3 @@ Add your content here.  Format your content with:
   * Text in *bold* or _italic_
   * Headings, paragraphs, and lists
   * Automatic links to other wiki pages
-
-
-<img src="http://agiledoc.googlecode.com/svn/wiki/LiveSourceEcosystem.jpg" border="1">
