--- a/wiki/CustomerDevelopment.wiki
+++ b/wiki/CustomerDevelopment.wiki
@@ -1,14 +1,19 @@
-
-
 = LIVE SOURCE Ecosystem =
 
-<img border="1" width="800px" src="http://agiledoc.googlecode.com/svn/wiki/LiveSourceEcosystem.jpg" >
+<img border="2" width="800px" src="http://agiledoc.googlecode.com/svn/wiki/LiveSourceEcosystem.jpg" >
 
 
 
 = LIVE SOURCE Core Values =
 
-Add your content here.
+== Programmers ==
+
+== Project Managers ==
+
+== Software Company Owners ==
+
+== Software Customers ==
+
 
 
 = Minimum Viable Products =
