--- a/wiki/CustomerDevelopment.wiki
+++ b/wiki/CustomerDevelopment.wiki
@@ -1,4 +1,4 @@
-<center><font color="orange">= LIVE SOURCE Ecosystem =</font></center>
+= <center><font color="orange"> LIVE SOURCE Ecosystem </font></center> =
 
 ||<img border="2" width="800px" src="http://agiledoc.googlecode.com/svn/wiki/LiveSourceEcosystem.jpg" >||
 
