Edited wiki page CustomerDevelopment through web user interface.

--- a/wiki/CustomerDevelopment.wiki
+++ b/wiki/CustomerDevelopment.wiki
@@ -7,6 +7,10 @@
 = <font color="orange">LIVE SOURCE Core Values</font> =
 
 == Programmers ==
+* Better Communication with Stakeholders
+* More Recognition from Stakeholders after transparency
+* Better software quality and management through a web toolkit.
+* Easier tool for programming and deploying
 
 == Project Managers ==
 
