--- a/src/sourceagile/client/InternationalizationConstants_es.properties
+++ b/src/sourceagile/client/InternationalizationConstants_es.properties
@@ -20,8 +20,9 @@ documentation = Documentación
 planning = Planificación
 metrics = Métricas
 source = Código Fuente
-projectDescription = Descripción del proyecto
-featuresList = Lista de funciones
+projectDescription = Descripción del Proyecto
+featuresList = Lista de Funciones
+requirementsList = Lista de Requisitos
 architecture = Arquitetura
 entities = Entidades
 specification = Portal de la Especificación
