--- a/trunk/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
+++ b/trunk/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
@@ -22,6 +22,7 @@ metrics = Métricas
 source = Código Fonte
 projectDescription = Descrição do Projeto
 featuresList = Funcionalidades
+requirementsList = Lista de Requisitos
 architecture = Arquitetura
 entities = Entidades
 specification = Portal da Especificação
