--- a/tags/Release0.8_AppEngine/src/sourceagile/client/InternationalizationConstants_es.properties
+++ b/tags/Release0.8_AppEngine/src/sourceagile/client/InternationalizationConstants_es.properties
@@ -14,14 +14,16 @@ relatedLinks = Links Relacionados
 totals = Totales
 addNewTask = Nueva Tarea
 search = Búsqueda
-development = Desarrollo
+implementation = Implementación
 diagnosis = Diagnóstico
 documentation = Documentación
 planning = Planificación
 metrics = Métricas
 source = Código Fuente
-projectDescription = Descripción del proyecto
-featuresList = Lista de funciones
+projectDescription = Descripción del Proyecto
+mainFeatures = Funciones Principales
+requirements = Requisitos
+requirementsList = Lista de Requisitos
 architecture = Arquitetura
 entities = Entidades
 specification = Portal de la Especificación
