--- a/tags/Release0.8_AppEngine/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
+++ b/tags/Release0.8_AppEngine/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
@@ -14,14 +14,16 @@ relatedLinks = Links Relacionados
 totals = Totais
 addNewTask = Adicionar Tarefa
 search = Pesquisa
-development = Desenvolvimento
+implementation = Implementação
 diagnosis = Diagnose
 documentation = Documentação
 planning = Planejamento
 metrics = Métricas
 source = Código Fonte
 projectDescription = Descrição do Projeto
-featuresList = Funcionalidades
+mainFeatures = Principais Funcionalidades
+requirements = Requisitos
+requirementsList = Lista de Requisitos
 architecture = Arquitetura
 entities = Entidades
 specification = Portal da Especificação
