--- a/trunk/src/sourceagile/client/InternationalizationConstants_es.properties
+++ b/trunk/src/sourceagile/client/InternationalizationConstants_es.properties
@@ -14,14 +14,15 @@ relatedLinks = Links Relacionados
 totals = Totales
 addNewTask = Nueva Tarea
 search = Búsqueda
-development = Desarrollo
+implementation = Implementación
 diagnosis = Diagnóstico
 documentation = Documentación
 planning = Planificación
 metrics = Métricas
 source = Código Fuente
 projectDescription = Descripción del Proyecto
-featuresList = Lista de Funciones
+mainFeatures = Funciones Principales
+requirements = Requisitos
 requirementsList = Lista de Requisitos
 architecture = Arquitetura
 entities = Entidades
