--- a/tags/Release0.8_AppEngine/src/sourceagile/client/InternationalizationConstants_es.properties
+++ b/tags/Release0.8_AppEngine/src/sourceagile/client/InternationalizationConstants_es.properties
@@ -31,3 +31,6 @@ userManual = Manual de Usuario
 export = Exportar
 edit = Edición
 test = Test
+noTestCreated = Ninguno teste creado.
+createUnitTest = Crear Test Unitario
+viewSourceCode = Ver el Código Fuente
