--- a/trunk/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
+++ b/trunk/src/sourceagile/client/InternationalizationConstants_pt_BR.properties
@@ -31,3 +31,6 @@ userManual = Manual do Usuário
 export = Exportar
 edit = Editar
 test = Teste
+noTestCreated = Nenhum teste criado.
+createUnitTest = Criar Teste Unitario
+viewSourceCode = Visualizar o Código Fonte
