--- a/wiki/Customer_Problem_Solution.wiki
+++ b/wiki/Customer_Problem_Solution.wiki
@@ -1,11 +1,8 @@
 = CPS 1 = 
 
-Customer:  Startup Software Companies (Owners)
-5. Problem:   Not enough developers available to build their products
-
-  
-  P.
-  Solution:  CrowdLowd
+ Customer:  Startup Software Companies (Owners)
+ Problem:   Not enough developers available to build their products
+ Solution:  CrowdLowd
 
 
 
