--- a/wiki/Customer_Problem_Solution.wiki
+++ b/wiki/Customer_Problem_Solution.wiki
@@ -12,30 +12,37 @@
  Solution:  Good Co-founder <br><br><br>
 
 
+
 = CPS 3 = 
-
- Customer:  Startup Software Companies (Owners) that practice Agile Development <br>
- Problem:   Hard to practice Agile development <br>
- Solution:  More adaptations, more customizations, better cheap/free tools <br><br><br>
-
-
-= CPS 4 = 
 
   Customer:  Medium/Big Software Companies (Owners) <br>
   Problem:   High Developers rotativity (turnovers) <br>
   Solution:  Better salaries/benefits, practice agile development <br><br><br>
 
 
-
-= CPS 5 = 
+= CPS 4 = 
 
   Customer:  Medium/Big Software Companies (Owners) <br>
   Problem:   High cost of Developers salary <br>
   Solution:  Improve developers graduations, more cost/benefits transparency  <br><br><br>
 
 
+= CPS 5 = 
+
+ Customer:  Startup Software Companies (Owners) that practice Agile Development <br>
+ Problem:   Hard to practice Agile development <br>
+ Solution:  More adaptations, more customizations, better cheap/free agile development tools <br><br><br>
+
+
 = CPS 6 = 
+
+ Customer:  Medium/Big Software Companies (Owners) that practice Agile Development <br>
+ Problem:   Hard to practice Agile development <br>
+ Solution:  More adaptations, more customizations, better agile development tools <br><br><br>
+
+
+= CPS 7 = 
 
   Customer:  Agilistas (Academics) <br>
   Problem:   Hard to practice the Agile practices <br>
-  Solution:  More adaptation, more customization, better tools <br><br><br>
+  Solution:  More adaptation, more customization, better agile development tools <br><br><br>
