Edited wiki page Customer_Problem_Solution through web user interface.

--- a/wiki/Customer_Problem_Solution.wiki
+++ b/wiki/Customer_Problem_Solution.wiki
@@ -45,4 +45,4 @@
 
   Customer:  Agilistas (Academics) <br>
   Problem:   Hard to practice the Agile practices <br>
-  Solution:  More adaptation, more customization, better agile development tools <br><br><br>
+  Solution:  More adaptation, more customization, better agile development tools (with free licence for academics) <br><br><br>
