--- a/wiki/Business_Model.wiki
+++ b/wiki/Business_Model.wiki
@@ -1,2 +1,3 @@
-|| Stage || Buyer's Process || Business Task ||
+|| *Stage* || *Buyer's Process* || *Business Task* ||
 || Presented || Heard about the tool in an event || Event Marketing and presentations ||
+|| Suspect|| Heard about the tool in an event || Event Marketing and presentations ||
