--- a/wiki/Business_Model.wiki
+++ b/wiki/Business_Model.wiki
@@ -1,3 +1,3 @@
 || *Stage* || *Buyer's Process* || *Business Task* ||
-|| Presented || Heard about the tool in an event || Event Marketing and presentations ||
-|| Suspect|| Heard about the tool in an event || Event Marketing and presentations ||
+|| *Presented* || Heard about the tool in an event || Event Marketing and presentations ||
+|| *Suspect* || Search for Live Source on the Web || Web page reachable by easy keywords ||
